--- a/css.css
+++ b/css.css
@@ -54,10 +54,11 @@ label {background-color: blue;color: white;padding: 10px;margin:0px;display: inl
 	padding: 10px;
 	margin: 1px;
 	border: 1px solid black !important;
+	width: 1280px;
+	resize: both;
 }
 .slide img {
-	width:100%;
-	max-width:640px;
+	//width:100%;
 	resize:both;
 }
 //div.outline { display:none; }
