--- a/css.css
+++ b/css.css
@@ -54,13 +54,15 @@ label {background-color: blue;color: white;padding: 10px;margin:0px;display: inl
 	padding: 10px;
 	margin: 1px;
 	border: 1px solid black !important;
+	width: 640px;
+}
+.slideOuter {
 }
 .slide {
+	width: 1280px !important;
+	height: 360px !important;
 	border: 0px;
-}
-.slide, .slideOuter {
-	width: fit-content;
-	height: fit-content;
+	overflow: visible;
 }
 .slide img {
 	//width:100%;
