--- a/css.css
+++ b/css.css
@@ -7,6 +7,7 @@
 
 /* select slide and button immediately after selected radio button */
 .section:checked + .slideAndButtons { display: block; }  /* show selected section/slide */
+//.section:checked + .slideAndButtons { background-color: red; }  /* show selected section/slide */
 
 /* hide the buttons */
 /* if showallsections selected, then select the showalldiv sometime after (other buttons in between) - ... */
@@ -23,7 +24,7 @@
 
 
 /* select showalldiv any preceded by .hideslides */
-.hideslides:checked ~ .showalldiv .slide { display: none !important; }
+.hideslides:checked ~ .showalldiv .slideOuter { display: none !important; }
 .notesTitle { 
 	display: none 
 	font-size:20px; 
