--- a/css.css
+++ b/css.css
@@ -93,8 +93,8 @@ label {background-color: blue;color: white;padding: 10px;margin:0px;display: inl
 	min-width: 90%
 }
 body {
-	min-width: 600px !important;
+	min-width: 1000px !important;
 	//width:fit-content;
-	width:900px;
+	//width:1000px;
 }
 
